# Lab_Algo

./: .gitignore  AVL.cpp  AVL.h  Algorithms.h  Algoritms.cpp  CMakeLists.txt  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Generator.h  Test.cpp  TestChangeSizeAVLSortNoSort.txt  Tests.h  main.cpp  timer.h  traits.h
algo/: Algorithms.cpp
avl/: AVL.cpp  AVL.h
hdr/: Generator.h  timer.h
tests/: Tests.h
x64/Debug/: AVL.h.ifc.d.json  AVL.h_95FC2E57F389F34A.ifc.dt.module.json  AVL.h_95FC2E57F389F34A.ifc.dt.module.json.command  ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  vc143.idb
x64/Debug/ConsoleA.49aa026d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/ConsoleA.49aa026d_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
